<resources>
    <string name="app_name">HarryPotterApp</string>
    <string name="log_in">Iniciar Sesion</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="log_out">Cerrar Sesion</string>
    <string name="text_welcome">Bienvenido a la app de Harry Potter. Aqui encontraras informacion sobre tus personajes favoritos. Inicia sesion o registrate</string>
    <string name="message_log_out">Esta seguro que desea cerrar sesion?</string>
    <string name="empty_fields">Campos vacios</string>
    <string name="wrong_user">"Credenciales Invalidas, intente de nuevo"</string>

    <string name="name">Nombre:</string>
    <string name="house_hogwarts_name">Casa de Hogwarts:</string>
    <string name="real_name">Interpretado Por:</string>
    <string name="send_email">Enviar email</string>
    <string name="choose_color">Elige el color de tu casa favorita</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>