<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imgViewLogo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/harrypotterlogo" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/text_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewLogo" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/edittext_border"
        android:textColor="@color/black"
        android:ems="15"
        android:hint="@string/user"
        android:inputType="text"
        android:maxLength="20"
        android:singleLine="true"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:maxLength="2011111"
        android:ems="15"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/edittext_border"
        android:drawableRight="@drawable/ic_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUser" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:background="@drawable/button_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPass" />



</androidx.constraintlayout.widget.ConstraintLayout>